plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.4.0'
}

group = 'ru.merkii'
version = '2.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://maven.enginehub.org/repo/' }
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.xenondevs.xyz/releases' }
}

def relocationPackage = "ru.merkii.rduels.lib"

dependencies {
    // API
    compileOnly 'io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // WE
    compileOnly 'com.sk89q.worldedit:worldedit-core:7.3.9'
    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.3.9'

    // Placeholder
    compileOnly 'me.clip:placeholderapi:2.12.2'

    // Commands
    implementation 'io.github.revxrsal:lamp.common:4.0.0-rc.14'
    implementation 'io.github.revxrsal:lamp.bukkit:4.0.0-rc.14'

    // Config
    implementation 'org.spongepowered:configurate-yaml:4.0.0'
    implementation 'com.github.bivashy.ProximateConfigurate:common:0.0.0-M2'

    // Avaje Inject
    implementation 'io.avaje:avaje-inject:10.3'
    annotationProcessor 'io.avaje:avaje-inject-generator:10.3'

    // Hikari
    implementation 'com.zaxxer:HikariCP:7.0.2'
    implementation 'org.xerial:sqlite-jdbc:3.49.1.0'
    implementation 'com.mysql:mysql-connector-j:9.3.0'

}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

shadowJar {
    archiveClassifier.set('')

    relocate 'jakarta.inject', "${relocationPackage}.jakarta.inject"
    relocate 'io.avaje', "${relocationPackage}.io.avaje"
    relocate 'jakarta.persistence', "${relocationPackage}.jakarta.persistence"

    mergeServiceFiles()

    exclude 'META-INF/license/**'
    exclude 'META-INF/maven/**'
    exclude 'LICENSE'
    exclude 'NOTICE'
}

processResources {
    def props = [version: project.version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

build.dependsOn shadowJar
